# AutoStockTrading

./: .env.example  .gitignore  README.md  bot_manager.py  pyproject.toml
docs/: implementation-roadmap.md  ipo-telegram.md  kis-setup.md  kis-us-setup.md  kr-checklists.md  kr-strategies.md  logging.md  news-disclosure.md  platform-selection.md  process-management.md  stock-analysis.md  trading-engine.md
launchd/: com.plo.autostockbot.disclosure.plist  com.plo.autostockbot.krlong.plist  com.plo.autostockbot.krshort.plist  com.plo.autostockbot.krshorttrade.plist  com.plo.autostockbot.orderwatch.plist  com.plo.autostockbot.reporter.plist  com.plo.autostockbot.startall.plist  com.plo.autostockbot.telegram.plist
reports/2026-03-22/: investment-priority.md  stock-analysis-report-all.md  stock-analysis-report-large.md  (+7 more)
scripts/: archive_old_logs.py  autostart_all.sh  daily_data_pipeline.py  daily_report_scheduler.py  disclosure_check.py  important_disclosure_watcher.py  ipo_schedule_check.py  kis_check_connection.py  kis_quote_check.py  kis_us_balance_check.py  kis_us_daytime_order_test.py  kis_us_quote_check.py  kr_long_term_runner.py  kr_long_term_trader.py  kr_short_term_runner.py  kr_short_term_trader.py  log_demo_event.py  news_check.py  order_status_watcher.py  send_ipo_schedule_telegram.py  stock_analysis_collector.py  stock_analysis_report.py  system_status_report.py  telegram_command_listener.py  us_long_term_runner.py  us_long_term_trader.py  us_short_term_runner.py  us_short_term_trader.py  us_stock_analysis_collector.py  value_recovery_screener.py
(+57 files in other folders)
