[project]
name = "autostocktrading"
version = "0.1.0"
description = "Automated trading workspace for Korean and US stocks"
requires-python = ">=3.11"
readme = "README.md"
authors = [
  { name = "AutoStockTrading" }
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
